--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,10 +1,1 @@
-{
-  "meta": {
-    "username": "RobertSasak",
-    "repositoryName": "blog.sasak.sk",
-    "branch": "gh-pages"
-  },
-  "theme": {
-    "name": "Casper"
-  }
-}
+{"meta":{"username":"RobertSasak","repositoryName":"blog.sasak.sk","branch":"gh-pages","cname":"blog.sasak.sk"},"site":{"title":"Robert Sasak","url":"http://blog.sasak.sk"},"socialnetwork":{},"theme":{"name":"Casper","url":"//RobertSasak.github.io/blog.sasak.sk/themes/Casper"}}
